--- a/asset/css/layout.css
+++ b/asset/css/layout.css
@@ -38,6 +38,7 @@
     height: fit-content;
     max-height: calc(100vh - 200px);
     margin: 0;
+    margin-top: 20px;
     padding: 20px;
     box-sizing: border-box;
     width: 350px;
@@ -139,7 +140,7 @@
 
   #note-tab {
     position: fixed;
-    top: 90px;
+    top: 70px;
     right: 20px;
     z-index: 1000;
     cursor: pointer;
